Added gradient background

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,10 +13,21 @@
  *= require_tree .
  *= require_self
  */
+ 
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
 
 h1, h2, h3, h4, h5 {
     font-family: 'Open Sans', sans-serif;
+}
+
+body , .navbar{
+  // Gradient provided by  @_ighosh at UIgradients.com
+  background: #fd746c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #fd746c , #ff9068); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #fd746c , #ff9068); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.navbar {
+  border: none;
 }
