Added gradient modified home callout CSS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5 {
     font-family: 'Open Sans', sans-serif;
 }
 
-body , .navbar{
+.navbar, .home-callout {
   // Gradient provided by  @_ighosh at UIgradients.com
   background: #fd746c; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #fd746c , #ff9068); /* Chrome 10-25, Safari 5.1-6 */
@@ -30,4 +30,10 @@ body , .navbar{
 }
 .navbar {
   border: none;
+}
+
+.home-callout {
+  margin-top: -20px;
+  padding-top: 50px;
+  padding-bottom: 100px;
 }
