--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h1>Welcome from our home page!</h1>
+<div class= "home-callout text-center container-fluid">
+  <h1>Portal Sports!!</h1>
+  <h3> Find local Games</h3>
+</div>
