--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,16 +22,30 @@ h1, h2, h3, h4, h5 {
     font-family: 'Open Sans', sans-serif;
 }
 
+// Background Gradient 
 .navbar, .home-callout {
   // Gradient provided by  @_ighosh at UIgradients.com
   background: #fd746c; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #fd746c , #ff9068); /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to left, #fd746c , #ff9068); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+// Navbar Styles
 .navbar {
   border: none;
 }
 
+// Typography Styles
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav >li > a {
+  color:white;
+  &:hover {
+    color:white;
+    opacity:0.75;
+  }
+}
+
+// Homepage Styles
 .home-callout {
   margin-top: -20px;
   padding-top: 50px;
