Updated nav links using link_to added ion icons gem file

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,6 +20,8 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
+@import "ionicons";
+
 
 h1, h2, h3, h4, h5 {
     font-family: 'Open Sans', sans-serif;
