--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><i class="fa fa-group"></i> Portal Sports</a>
+          <%= link_to "/", class: "navbar-brand" do %>
+            <i class="fa fa-group"></i>
+            Portal Sports
+          <% end %>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">PS<span class="sr-only">(current)</span></a></li>
-            <li><a href="/about">About</a></li>
+            <li><%= link_to "About", "/about"%></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
@@ -45,7 +48,7 @@
             <div class="form-group">
               <input type="text" class="form-control" placeholder="Search">
             </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default"><i class="ion-ios-calculator"></i> Submit</button>
           </form>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
