--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1>About Page</h1>
+<div class="container-fluid text-center">
+  <h1>About Page</h1>
+  <p>We are Portal Sports. Our company focuses on creating awesome sports experiences Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, officia, quae, perferendis, corrupti fuga a nam deleniti impedit repellat facilis non voluptate omnis id animi pariatur magnam ipsa ipsum doloribus!</p>
+</div>
