--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">PS<span class="sr-only">(current)</span></a></li>
             <li><%= link_to "About", about_path%></li>
+              <li><%= link_to "Contact US", new_contact_path %></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
               <ul class="dropdown-menu">
