--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -25,6 +24,10 @@
             Portal Sports
           <% end %>
         </div>
+          <div class="nav navbar-nav navbar-right">
+            <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %> 
+            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %> 
+          </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
