--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,8 +25,12 @@
           <% end %>
         </div>
           <div class="nav navbar-nav navbar-right">
-            <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %> 
-            <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %> 
+            <% if user_signed_in? %>
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn" %>
+            <% else %>
+              <%= link_to "Log In", new_user_session_path, class: "btn btn-default navbar-btn" %> 
+              <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-default navbar-btn" %> 
+            <% end %>
           </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
