--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -64,11 +64,14 @@ h1, h2, h3, h4, h5 {
   }
 }
 
-
-
 // Homepage Styles
 .home-callout {
   margin-top: -20px;
   padding-top: 50px;
   padding-bottom: 100px;
+}
+
+
+.alert-notice {
+  display: none;
 }
