--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,23 @@
   <h1>Portal Sports!!</h1>
   <h3> Find local Games</h3>
 </div>
+<div class="container home-signup-links">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basix Membership</h2>
+        <h4> Signup for free and get basic access to the community</h4>
+        <br>
+        <%= link_to "Sign up with Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Proo Membership</h2>
+        <h4>Signup for pro account and get access to lorem ipsum</h4>
+        <br>
+        <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+      </div>
+    </div>
+  </div>
+</div>
