--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -71,9 +71,16 @@ h1, h2, h3, h4, h5 {
   padding-bottom: 100px;
 }
 
+.flash-container {
+  position: absolute;
+  width: 100%;
+}
 
-.alert-notice {
-  display: none;
+.alert-notice, .alert-alert {
+  text-align: center;
+  background: rgba(255, 255, 255, 0.3);
+  border-color: rgba(255, 255, 255, 0.5);
+  margin-top: -14px;
 }
 
 .home-signup-links {
