--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container"
   <div class ="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1 class="text-center">Create your profile</h1>
+      <h1 class="text-center">Edit your profile</h1>
       <p>hurda Durr!!</p>
       <div class="well">
         <%= render 'form' %>
