--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -29,3 +29,12 @@
   background-color: #5bc0de;
   border-color: #46b8da;
 }
+// User Index Page styles
+.user-index-avatar {
+  width: 128px;
+  height: 128px;
+  border-radius: 30%;
+}
+.well.white-bg {
+  background-color: white;
+}
