--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">PS<span class="sr-only">(current)</span></a></li>
+            <% if user_signed_in? %>
+              <li><%= link_to "Community", users_path %></li>
+              <li><%= link_to "My Account", edit_user_registration_path %></li>
+            <% end %>  
             <li><%= link_to "About", about_path%></li>
               <li><%= link_to "Contact US", new_contact_path %></li>
             <li class="dropdown">
